Fixed navigation menu anchors

--- a/section.html
+++ b/section.html
@@ -16,13 +16,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand"><img src="assets/nokiaMainLogo.png"></a>
+          <a href="index.html" class="navbar-brand"><img src="assets/nokiaMainLogo.png"></a>
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Location</a></li>
-            <li><a href="#">The site</a></li>
-            <li><a href="#">Useful info</a></li>
+            <li class="active"><a href="section.html">Location</a></li>
+            <li><a href="section.html">The site</a></li>
+            <li><a href="section.html">Useful info</a></li>
           </ul>
         </div>
       </div>
