--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Location</a></li>
-            <li><a href="#">The site</a></li>
-            <li><a href="#">Useful info</a></li>
+            <li><a href="section.html">Location</a></li>
+            <li><a href="section.html">The site</a></li>
+            <li><a href="section.html">Useful info</a></li>
           </ul>
         </div>
       </div>
