Fixed styles and added extra content to section view

--- a/section.html
+++ b/section.html
@@ -49,13 +49,33 @@
               <h2>Long tile</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
               <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
-              <span>Nostrum explicabo dolores temporibus nulla sed natus ea quo at, esse, expedita. Magnam excepturi soluta deserunt saepe earum est, nam sunt quisquam sint fugiat impedit culpa tempora, repellat officiis ipsum.</span>
-              <span>Iure repellat expedita odit ut tempora suscipit velit numquam rem delectus molestias dolorem, eius commodi non at facilis labore natus. Recusandae, sint nostrum modi consequatur, eos aspernatur alias quae rem!</span>
-              <span>Est qui cupiditate ratione aliquid totam cumque reiciendis vel magni, dolorum a unde iusto eligendi ducimus incidunt illum nobis enim porro placeat veniam, accusantium dolores expedita! Esse hic, expedita in.</span>
-              <span>Dolorem non perspiciatis odio, possimus dicta facilis. Deleniti aperiam voluptate consequatur atque odit, nobis aspernatur, fugiat esse est voluptatum aliquam sed quam omnis eveniet adipisci error animi harum dolorum. Animi.</span></p>
             </div>
             <div class="col-xs-12 col-sm-6">
-              <img src="http://placehold.it/400x600" alt="">
+              <img src="http://placehold.it/400x300" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12 col-sm-6">
+              <h2>Long tile</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
+              <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <img src="http://placehold.it/400x300" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12 col-sm-6">
+              <h2>Long tile</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
+              <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <img src="http://placehold.it/400x300" alt="">
             </div>
           </div>
         </div>
