Fixed styles and added extra content to section view

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="ns_body">
   <header id="ns_header">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#ns_navbar">
