--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="section.html">Location</a></li>
-            <li><a href="section.html">The site</a></li>
-            <li><a href="section.html">Useful info</a></li>
+            <li class="active"><a href="#">Landing</a></li>
+            <li><a href="section.html">Section</a></li>
+            <li><a href="sitemap.html">Sitemap</a></li>
           </ul>
         </div>
       </div>
@@ -119,7 +119,13 @@
     </div>
   </section>
   <footer class="ns_footer">
-    <span>© Nokia 2017</span>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <span>© Nokia 2017</span>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="assets/jquery-3.1.1.min.js"></script>
   <script src="assets/bootstrap.min.js"></script>
