--- a/sitemap.html
+++ b/sitemap.html
@@ -21,7 +21,7 @@
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="home.html">Landing</a></li>
+            <li><a href="index.html">Landing</a></li>
             <li><a href="section.html">Section</a></li>
             <li class="active"><a href="#">Sitemap</a></li>
           </ul>
