Added site information. Styled with Nokia colors

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to the new site</title>
+  <title>#JuntosSomosNokia</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/unslider.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body id="ns_body">
   <header id="ns_header">
@@ -17,12 +18,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand"><img src="assets/nokiaMainLogo.png"></a>
+          <a href="#" class="navbar-brand"><img src="assets/img/juntossomos.png"></a>
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Landing</a></li>
-            <li><a href="section.html">Section</a></li>
+            <li class="active"><a href="#">Home</a></li>
             <li><a href="sitemap.html">Sitemap</a></li>
           </ul>
         </div>
@@ -32,10 +32,33 @@
   <section class="ns_carousel">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-9">
           <div class="ns_slider">
-             <ul><li><a href="section.html"><img src="http://placehold.it/700x250"></a></li><li><a href="section.html"><img src="http://placehold.it/700x250"></a></li><li><a href="section.html"><img src="http://placehold.it/700x250"></a></li><li><a href="section.html"><img src="http://placehold.it/700x250"></a></li></ul>
+             <ul>
+               <li>
+                  <img src="assets/img/slider_fach_01.JPG" />
+               </li>
+               <li>
+                  <img src="assets/img/slider_fach_02.JPG" />
+               </li>
+               <li>
+                  <img src="assets/img/slider_fach_03.JPG" />
+               </li>
+               <li>
+                  <img src="assets/img/slider_fach_04.JPG" />
+               </li>
+               <li>
+                  <img src="assets/img/slider_fach_05.JPG" />
+               </li>
+             </ul>
           </div>
+        </div>
+        <div class="col-md-3">
+          <div class="fayer-layer"><p>Sejam bem-vindos ao novo escrit&oacute;rio da Nokia em S&atilde;o Paulo! Vamos descobrir juntos esse novo ambiente de colabora&ccedil;&atilde;o, produtividade e motiva&ccedil;&atilde;o.</p>
+              <p>Um local de trabalho projetado em meio aos conceitos de modernidade e flexibilidade organizacional, com toques de inova&ccedil;&atilde;o e conforto. Aqui, queremos que voc&ecirc; se sinta integrado aos neg&oacute;cios e &agrave;s pessoas da Nokia, pronto para se desenvolver com a gente rumo ao sucesso!</p>
+              <p>Desde a nossa integra&ccedil;&atilde;o, esperamos muito pelo momento em que todos n&oacute;s estar&iacute;amos em um &uacute;nico local. Agora sim, somos uma s&oacute; Nokia!</p>
+              <p>Nesta p&aacute;gina, voc&ecirc; vai encontrar tudo o que precisa saber sobre o novo site: ramais, dicas &uacute;teis, funcionamento do escrit&oacute;rio, acesso, conceitos do ambiente corporativo e escrit&oacute;rio virtual e ainda mais, como conveni&ecirc;ncias do condom&iacute;nio E-Business Park, informa&ccedil;&otilde;es de transporte p&uacute;blico e outros.</p>
+              <p>Sejam bem-vindos!</p></div>
         </div>
       </div>
     </div>
@@ -45,27 +68,59 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
           <a href="section.html"><div class="ns_tile_element" id="element_with_image">
-            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="http://placehold.it/240x240" alt="">
+            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
             <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>Tile</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+              <h2>Workplace Resources</h2>
+              <p>A área de WR visa expandir as possibilidades do mundo conectado, tornando os ambientes de trabalho inspiradores, eficientes e equipados com tecnologias inovadoras que elevem o potencial de nossas pessoas.</p>
             </div>
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
           <a href="section.html"><div class="ns_tile_element" id="element_with_image">
             <div class="col-xs-6 col-sm-6 col-md-6">
-              <h2>Tile</h2>
+              <h2>Projeto &amp; Obra</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
             </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="http://placehold.it/240x240" alt="">
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
           <a href="section.html"><div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12 image-left image-right">
+              <img style="width:100%;" src="assets/img/toght.jpg">
+            </div>
             <div class="col-xs-12">
-              <h2>Long tile</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis.</p>
+              <h2><img src="assets/img/juntossomosblack.png"></h2>
+              <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
+            </div>
+          </div></a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
+            <div class="col-xs-6 col-sm-6 col-md-6">
+              <h2>Transporte</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate mollitia laborum aliquid voluptates ea, quis molestiae rerum odio doloremque quo nihil? Reiciendis explicabo est aut, culpa alias, ullam iste!</p>
+            </div>
+          </div></a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+            <div class="col-xs-6 col-sm-6 col-md-6">
+              <h2>RH</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
+            </div>
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
+          </div></a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <a href="section.html"><div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-12 image-left image-right">
+              <img style="width:100%;" src="assets/img/1433.jpg">
+            </div>
+            <div class="col-xs-12">
+              <h2>IT Tools</h2>
+              <p>Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem optio aliquid, dignissimos unde enim libero, quam ullam nemo! Necessitatibus quaerat velit non voluptatem veritatis quas, libero error accusantium quos voluptas.</p>
             </div>
           </div></a>
         </div>
@@ -78,39 +133,29 @@
         <div class="col-xs-12 col-sm-12 col-md-12">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
-              <a href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+              <a id="click1" href="#collapse1" data-toggle="collapse" data-parent="#accordion">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    Collapsible Item 1
+                    Modern Office
+                    <i id="collapse-fontawe1" class="fa fa-plus pull-right"></i>
                   </h4>
                 </div>
               </a>
-              <div class="panel-collapse collapse in" id="collapse1">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div>
+              <div class="panel-collapse collapse" id="collapse1">
+                 <a href="section.html"><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
               </div>
             </div>
             <div class="panel panel-default">
-              <a href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+              <a id="click2" href="#collapse2" data-toggle="collapse" data-parent="#accordion">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    Collapsible Item 2
+                    #proud2beNokia
+                    <i id="collapse-fontawe2" class="fa fa-plus pull-right"></i>
                   </h4>
                 </div>
               </a>
               <div class="panel-collapse collapse" id="collapse2">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <a href="#collapse3" data-toggle="collapse" data-parent="#accordion">
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    Collapsible Item 3
-                  </h4>
-                </div>
-              </a>
-              <div class="panel-collapse collapse" id="collapse3">
-                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div>
+                <a href="section.html"><div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus deserunt tempora autem dolore quod rerum voluptates! Ab, tenetur officia fugiat sint ipsum iste deserunt ipsa pariatur quam! Autem, sint, illum.</div></a>
               </div>
             </div>
           </div>
@@ -133,6 +178,23 @@
   <script>
     $(function(){
       $('.ns_slider').unslider()
+    })
+  </script>
+  <script>
+    $(function(){
+      var fa1 = $('#collapse-fontawe1');
+      var fa2 = $('#collapse-fontawe2');
+      var co1 = $('#click1');
+      var co2 = $('#click2');
+
+      co1.click(function(){
+        fa1.toggleClass('fa-plus');
+        fa1.toggleClass('fa-minus');
+      });
+      co2.click(function(){
+        fa2.toggleClass('fa-plus');
+        fa2.toggleClass('fa-minus');
+      });
     })
   </script>
 </body>
