--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <h2>Projeto &amp; Obra</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
             </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
@@ -110,7 +110,7 @@
               <h2>RH</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
             </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/fachada.png">
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="assets/img/Fachada.png">
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
