Added site information. Styled with Nokia colors

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+          <a href="section.html"><div class="ns_tile_element home" id="element_with_image">
             <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/OCNVQQ0.jpg">
             <div class="col-xs-6 col-sm-6 col-md-6">
               <h2>Workplace Resources</h2>
@@ -76,7 +76,7 @@
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+          <a href="section.html"><div class="ns_tile_element home" id="element_with_image">
             <div class="col-xs-6 col-sm-6 col-md-6">
               <h2>Projeto &amp; Obra</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
@@ -85,7 +85,7 @@
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
-          <a href="section.html"><div class="ns_tile_element" id="element_without_image">
+          <a href="section.html"><div class="ns_tile_element home" id="element_without_image">
             <div class="col-xs-12 image-left image-right">
               <img style="width:100%;" src="assets/img/toght.jpg">
             </div>
@@ -96,7 +96,7 @@
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+          <a href="transporte.html"><div class="ns_tile_element home" id="element_with_image">
             <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="assets/img/map_preview.jpg">
             <div class="col-xs-6 col-sm-6 col-md-6">
               <h2>Transporte</h2>
@@ -105,7 +105,7 @@
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
-          <a href="section.html"><div class="ns_tile_element" id="element_with_image">
+          <a href="rh.html"><div class="ns_tile_element home" id="element_with_image">
             <div class="col-xs-6 col-sm-6 col-md-6">
               <h2>RH</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut quisquam repudiandae, tenetur quos ullam. Suscipit nobis nostrum qui sit harum, ad quos quis provident, maiores, porro labore excepturi laborum?</p>
@@ -114,7 +114,7 @@
           </div></a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12">
-          <a href="section.html"><div class="ns_tile_element" id="element_without_image">
+          <a href="section.html"><div class="ns_tile_element home" id="element_without_image">
             <div class="col-xs-12 image-left image-right">
               <img style="width:100%;" src="assets/img/1433.jpg">
             </div>
