--- a/transporte.html
+++ b/transporte.html
@@ -46,9 +46,9 @@
         <div class="col-xs-12 col-sm-12 col-md-12">
           <div class="ns_tile_element" id="element_without_image">
             <div class="col-xs-12 col-sm-6">
-              <h2>Long tile</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt doloremque, minus sapiente eum itaque ut aperiam dolorem possimus totam, deleniti, dolorum quos ipsam fugiat at impedit illum similique dicta officiis. <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, nam, officia! Nisi repudiandae voluptas quae similique minus ducimus, dolor voluptatibus qui ad quibusdam, culpa soluta delectus blanditiis expedita ut illum!</span>
-              <span>Non, earum possimus fugiat architecto debitis nostrum veniam quibusdam itaque iste totam quos explicabo, obcaecati sit, cum reiciendis nam id omnis autem assumenda excepturi placeat eaque temporibus. Facilis numquam, saepe.</span>
+              <h2>Fretado</h2>
+              <h3>Definições do Fretamento</h3>
+              <p>Conforme foi anunciado ao longo dos últimos meses, foi criado um comitê (CMT) que se dedicou a buscar soluções para facilitar esse momento de transição e assim a Nokia optou por oferecer transporte fretado em São Paulo, a partir do dia 2 de maio e durante o primeiro ano da mudança de escritório. <br>Para a definição dos colaboradores que utilizariam o transporte fretado, optou-se pela inscrição através de um link, nos 3 diferentes horários e que se encerrou quando da totalidade das vagas disponíveis preenchidas. <br>Nessas reuniões do Comitê também foi decidido que o transporte seria estendido também à estagiários e terceiros.</p>
             </div>
             <div class="col-xs-12 col-sm-6">
               <img src="http://placehold.it/400x300" alt="">
