--- a/sitemap.html
+++ b/sitemap.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to the new site</title>
+  <title>#JuntosSomosNokia</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="stylesheet" href="assets/unslider.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body id="ns_body">
   <header id="ns_header">
@@ -17,13 +18,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="index.html" class="navbar-brand"><img src="assets/nokiaMainLogo.png"></a>
+          <a href="index.html" class="navbar-brand"><img src="assets/img/juntossomos.png"></a>
         </div>
         <div class="collapse navbar-collapse" id="ns_navbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Landing</a></li>
-            <li><a href="section.html">Section</a></li>
-            <li class="active"><a href="#">Sitemap</a></li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="sitemap.html">Sitemap</a></li>
           </ul>
         </div>
       </div>
